# ora

./: Makefile  pyproject.toml
src/: config.py  ora_config.py
