[tool.poetry]
name = "mystarter"
version = "0.1.0"
description = "my prototyping starter"
authors = ["firstVersion"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pip-licenses = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore::UserWarning",]

[tool.flake8]
max-line-length = 120
ignore = "E203,W503,W504,"

[tool.black]
line-length = 120

[tool.mypy]

[tool.isort]


