[tool.poetry]
name = "ORA"
version = "0.1.0"
description = "ORA is work directory creater And documentation supporter."
authors = ["firstVersion"]
license = "MIT License"
readme = "README.md"

[tool.poetry.scripts]
ora = "main:main"

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pip-licenses = "^4.3.0"
pytest-cov = "^4.0.0"
pyproject-flake8 = "^6.0.0.post1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore::UserWarning",]

[tool.flake8]
max-line-length = 120
ignore = "E203,W503,W504,"

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
